test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_multiplicity/src/error_type_attr.sw
library;

#[error_type]
enum Ok {
    #[error(m = "ok")]
    A: (),
}

#[error_type]
#[error_type]
#[error_type]
enum NotOk {
    #[error(m = "ok")]
    A: (),
}